--- a/fxpqeditor/editor.ui
+++ b/fxpqeditor/editor.ui
@@ -47,52 +47,7 @@
           </object>
         </child>
         <child>
-          <object class="ttk.Panedwindow.Pane" id="Pane_Editor">
-            <child>
-              <object class="ttk.Notebook" id="Notebook_Main">
-                <property name="height">200</property>
-                <property name="width">200</property>
-                <layout>
-                  <property name="column">0</property>
-                  <property name="propagate">True</property>
-                  <property name="row">0</property>
-                </layout>
-                <child>
-                  <object class="ttk.Notebook.Tab" id="Tab_Untitled">
-                    <property name="text" translatable="yes">untitled.fxpq</property>
-                    <child>
-                      <object class="pygubu.builder.widgets.scrollbarhelper" id="Scrollbarhelper_Untitled">
-                        <property name="scrolltype">both</property>
-                        <property name="usemousewheel">false</property>
-                        <layout>
-                          <property name="column">0</property>
-                          <property name="propagate">True</property>
-                          <property name="row">0</property>
-                        </layout>
-                        <child>
-                          <object class="tk.Text" id="Text_Editor">
-                            <property name="spacing1">2</property>
-                            <property name="text" translatable="yes">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
-&lt;!DOCTYPE fxpq&gt;
-&lt;fxpq&gt;
-    &lt;!-- zone or item or enemy or npc --&gt;
-&lt;/fxpq&gt;</property>
-                            <property name="width">80</property>
-                            <property name="wrap">none</property>
-                            <layout>
-                              <property name="column">0</property>
-                              <property name="propagate">True</property>
-                              <property name="row">0</property>
-                            </layout>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
+          <object class="ttk.Panedwindow.Pane" id="Pane_Editor" />
         </child>
       </object>
     </child>
