--- a/fxpqeditor/editor.ui
+++ b/fxpqeditor/editor.ui
@@ -72,14 +72,18 @@
         </child>
         <child>
           <object class="tk.Menuitem.Command" id="Command_Save">
+            <property name="command">on_save</property>
             <property name="command_id_arg">false</property>
             <property name="label" translatable="yes">Save</property>
+            <property name="state">disabled</property>
           </object>
         </child>
         <child>
           <object class="tk.Menuitem.Command" id="Command_SaveAs">
+            <property name="command">on_save_as</property>
             <property name="command_id_arg">false</property>
             <property name="label" translatable="yes">Save as...</property>
+            <property name="state">disabled</property>
           </object>
         </child>
         <child>
